--- a/checkmk-server/manifests/checkmk-server_service.yaml
+++ b/checkmk-server/manifests/checkmk-server_service.yaml
@@ -18,5 +18,5 @@ spec:
   selector:
     app: checkmk
   sessionAffinity: None
-  type: NodePort
-#  type: LoadBalancer
+  #type: NodePort
+  type: LoadBalancer
